# superplan-plugin

./: .gitignore  AGENTS.md  README.md  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  scratch.js
.agents/rules/: superplan-entry.md
.agents/workflows/: superplan-debug.md  superplan-postmortem.md  superplan-review.md  superplan-shape.md  superplan-tdd.md
.gemini/commands/: superplan.toml
.github/: copilot-instructions.md
.github/workflows/: overlay-release.yml  release-overlay.yml
apps/overlay-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/overlay-desktop/src-tauri/icons/: icon.icns
apps/overlay-desktop/src-tauri/src/: lib.rs  main.rs
context/: context.md
docs/: CONTRIBUTING.md  release-checklist.md
scripts/: copy-skills.js  generate-outputs.js  generate-outputs.sh  install.cmd  install.ps1  install.sh  overlay-release-dispatch.js  overlay-release.js  visibility-scenarios.js
skills/: README.md
src/cli/: graph.ts  (+18 more)
test/: cli.test.cjs  doctor.test.cjs  graph-autofix.test.cjs  helpers.cjs  install.test.cjs  lifecycle.test.cjs  overlay-cli.test.cjs  overlay-contract.test.cjs  overlay-desktop-compact-copy.test.cjs  overlay-desktop-compact-state.test.cjs  overlay-desktop-prototype.test.cjs  overlay-desktop-runtime.test.cjs  overlay-preferences.test.cjs  overlay-release-dispatch.test.cjs  overlay-release.test.cjs  parse.test.cjs  popup.test.cjs  remove-purge.test.cjs  scaffold.test.cjs  sync.test.cjs  task.test.cjs  update.test.cjs  validate.test.cjs  visibility-examples.test.cjs  visibility.test.cjs  workflow-surfaces.test.cjs
(+290 files in other folders)
